typescript/checker/tests/conformance/es6/arrowFunction/emitArrowFunctionWhenUsingArguments02_ES6.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            33,
        ),
        hi: BytePos(
            42,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/arrowFunction/emitArrowFunctionWhenUsingArguments02_ES6.ts:3:15
  |
3 | var a = () => arguments;
  |               ^^^^^^^^^

